--- a/index.html
+++ b/index.html
@@ -1,38 +1,41 @@
 <!DOCTYPE html>
 <html>
-	<head>
+<head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>object date time</title>
-  </head>
+</head>
 <body>
 	<script>
-		let a=new Date();
-			a.setTime(15.37);
-			if(a>6.00&&a<=11.00) {	
-				document.write("morning");
-			}
-			else if(a>11.00&&a<=18.00){
-				document.write("afteroon");
-			}
-		else{
-			document.write("night");
-		}
-		
-		<!-- let b=new Date(); -->
-			<!-- c=b.setTime(prompt(parseInt("enter"))); -->
-			<!-- if(c>6.00&&c<=11.00) {	 -->
+		<!-- let a=new Date(); -->
+			<!-- a.setTime(15); -->
+			<!-- if(a>6.00&&a<=11.00) {	 -->
 				<!-- document.write("morning"); -->
 			<!-- } -->
-			<!-- else if(c>11.00&&c<=18.00){ -->
+			<!-- else if(a>11.00&&a<=18.00){ -->
 				<!-- document.write("afteroon"); -->
 			<!-- } -->
 		<!-- else{ -->
 			<!-- document.write("night"); -->
 		<!-- } -->
 		
-		
-		
+		let b=new Date();
+			c=b.setTime(parseInt(prompt("enter the time")));
+			if(c>=1.00&&c<=5.00) {	
+				document.write("early morning");
+			}
+			else if(5>11.00&&c<=11.00){
+				document.write("morning");
+			}
+			else if(c>11.00&&c<=18.00){
+				document.write("afternoon");
+			}
+			else if(c>18.00&&c<=24.00){
+				document.write("night");
+			}
+		else{
+			document.write("invalid time");
+		}
 	</script>
 </body>
 </html>
